--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,9 @@
 RewriteEngine On
 
+RewriteBase /
+
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-l
 
-RewriteRule ^(.+)$ index.php?route=$1 [QSA,L]
+RewriteRule ^(.*)$ index.php?route=$1 [QSA,L]
