--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,8 @@
         "psr-4": {
             "App\\": "app/"
         }
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^7.1"
     }
 }
